ver 0.21 (not yet released)
* protocol
  - "tagtypes" can be used to hide tags
  - "find" and "search" can sort
* tags
  - new tag "OriginalDate"
* decoder
  - gme: try loading m3u sidecar files
  - pcm: support audio/L24 (RFC 3190)
* output
  - alsa: non-blocking mode
  - sndio: remove support for the broken RoarAudio sndio emulation
* mixer
  - sndio: new mixer plugin

ver 0.20.11 (2017/10/18)
* storage
  - curl: support Content-Type application/xml
* decoder
  - ffmpeg: more reliable song duration
  - gme: fix track numbering
* improve random song order when switching songs manually
* fix case insensitive search without libicu
* fix Unicode file names in playlists on Windows
* fix endless loop when accessing malformed file names in ZIP files

ver 0.20.10 (2017/08/24)
* decoder
  - ffmpeg: support MusicBrainz ID3v2 tags
* tags
  - aiff: fix FORM chunk size endianess (is big-endian)
* mixer
  - osx: add a mixer for OSX.
* fix crash when resuming playback before decoder is ready
* fix crash on Windows

ver 0.20.9 (2017/06/04)
* decoder
  - ffmpeg: support *.adx
* fix byte order detection on FreeBSD/aarch64
* fix more random crashes when compiled with clang

ver 0.20.8 (2017/05/19)
* output
  - osx: fix build failure due to missing "noexcept"
* playlist
  - m3u: support MIME type `audio/mpegurl`
* fix build failure with GCC 4.x

ver 0.20.7 (2017/05/15)
* database
  - simple: fix false positive directory loop detection with NFS
* enforce a reasonable minimum audio_buffer_size setting
* cap buffer_before_play at 80% to prevent deadlock
* fix random crashes when compiled with clang

ver 0.20.6 (2017/03/10)
* input
  - curl: fix headers after HTTP redirect to Shoutcast server
* decoder
  - ffmpeg: re-enable as fallback
  - mpcdec: fix crash (division by zero) after seeking
  - sidplay: make compatible with libsidplayfp < 1.8
* fix stream tags after automatic song change
* workaround for GCC 4.9.4 / libstdc++ bug (build failure)

ver 0.20.5 (2017/02/20)
* tags